# Alarm

./: cargo.toml
pico-network/: Cargo.toml  build.rs  memory.x  pico_firmware.uf2
pico-network/.cargo/: config.toml
pico-network/src/: main.rs
shared-protocol/: Cargo.toml
shared-protocol/src/: lib.rs
stm32-core/: Cargo.toml  build.rs  memory.x
stm32-core/.cargo/: config.toml
stm32-core/src/: main.rs
