[package]
name = "stm32-core"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-protocol = { path = "../shared-protocol" }
postcard = { version = "1.0", features = ["defmt"] }

embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32u545re", "time-driver-any", "exti", "memory-x", "unstable-pac"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }

st7735-lcd = "0.9.0"
embedded-graphics = "0.8.1"
bme280-rs = "0.2.0"
smart-leds = "0.3.0"
heapless = "0.8.0"

cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }