[package]
name = "stm32-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
shared-protocol = { path = "../shared-protocol" }
postcard = { version = "1.0", features = ["defmt"] }

embassy-stm32    = { version = "0.6.0", features = ["defmt", "stm32u545re", "time-driver-any", "exti", "memory-x", "unstable-pac"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time     = { version = "0.5.1",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-sync     = { version = "0.5.0" }

st7735-lcd        = "0.9.0"
embedded-graphics = "0.8.1"
bme280-rs         = "0.2.0"
smart-leds        = "0.3.0"
heapless          = "0.8.0"

cortex-m    = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt       = "0.3.5"
defmt-rtt   = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }